# JobTrackerAI

./: .env.example  .gitignore  README.md  application-matching-status-task5-spec.md  dashboard-manual-review-task6-spec.md  gemini-email-extraction-task4-spec.md  gmail-oauth-task2-spec.md  gmail-push-ingestion-task3-spec.md  historical-backfill-task7-spec.md  production-deployment-task8-spec.md  project-foundation-task1-spec.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: applications.py  auth.py  backfill.py  dependencies.py  gmail.py  pubsub.py  review.py
backend/app/core/: config.py  security.py
backend/app/db/: mongo.py
backend/app/models/: application.py  backfill.py  company.py  email.py  extraction.py  status_update.py  user.py
backend/app/prompts/: job_email_extraction.md
backend/app/repositories/: applications.py  backfill_jobs.py  companies.py  emails.py  status_updates.py  users.py
backend/app/services/: application_matching.py  application_status.py  email_extraction_worker.py  gemini.py  gmail_api.py  gmail_backfill.py  gmail_sync.py  gmail_watch.py  google_oauth.py  pubsub.py
backend/tests/: test_health.py
backend/tests/api/: test_applications.py  test_auth.py  test_backfill.py  test_gmail.py  test_pubsub.py  test_review.py
backend/tests/models/: test_extraction.py
backend/tests/repositories/: test_applications.py  test_backfill_jobs.py  test_emails.py  test_users.py
backend/tests/services/: test_application_matching.py  test_application_status.py  test_email_extraction_worker.py  (+4 more)
(+20 files in other folders)
