[project]
name = "jobtracker-backend"
version = "0.1.0"
description = "FastAPI service for JobTracker."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.1",
    "motor>=3.6.0,<4.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
